--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,9 +13,8 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 # Register qemu handlers with credentials (C) so setuid works
-      - name: Enable binfmt with credentials
-        run: |
-          docker run --rm --privileged tonistiigi/binfmt:latest --install all --credential yes
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
 
       - name: Set up dependencies
         run: |
@@ -37,4 +36,5 @@ jobs:
         with:
           name: sonicpad-images
           path: src/out/*.img
+
 
