--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,15 +12,16 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-# Register qemu handlers with credentials (C) so setuid works
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
 
       - name: Set up dependencies
         run: |
           sudo apt-get update
           sudo apt-get install -y dosfstools e2fsprogs
-
+      - name: Modify to allow sudo with qemu
+        run: |
+          sudo sed -i 's/:F$/:FC/' /usr/lib/binfmt.d/qemu-aarch64.conf
+          sudo systemctl restart systemd-binfmt
+          
       - name: Build rootfs
         run: |
           cd src
@@ -36,5 +37,6 @@ jobs:
         with:
           name: sonicpad-images
           path: src/out/*.img
+
 
 
