--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,19 +13,32 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # Installs QEMU emulators (no 'credential' input here)
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: arm64
+
+      # Re-register the aarch64 binfmt handler with C (credentials) + O + F
+      - name: Enable setuid for foreign arch (binfmt C flag)
+        shell: bash
+        run: |
+          sudo mount -t binfmt_misc binfmt_misc /proc/sys/fs/binfmt_misc || true
+          # Unregister existing handler if present
+          echo -1 | sudo tee /proc/sys/fs/binfmt_misc/qemu-aarch64 >/dev/null || true
+          # Register with OCF; interpreter path is the static qemu shipped by the action
+          interp=/usr/bin/qemu-aarch64-static
+          printf '%s' \
+          ":qemu-aarch64:M::\x7fELF\x02\x01\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02\x00\xb7\x00:\xff\xff\xff\xff\xff\xfe\xfe\x00\xff\xff\xff\xff\xff\xff\xff\xff\xfe\xff\xff\xff:${interp}:OCF" \
+          | sudo tee /proc/sys/fs/binfmt_misc/register >/dev/null
+          # sanity: should print 'flags: OCF'
+          grep -i '^flags' /proc/sys/fs/binfmt_misc/qemu-aarch64
+          
       - name: Set up dependencies
         run: |
           sudo apt-get update
-          sudo apt-get install -y dosfstools e2fsprogs qemu-user-static debootstrap
-      - name: Configure binfmt_misc for foreign architecture
-        # Use a privileged command to set the credentials flag
-        # This is a key step to enable setuid binaries like sudo
-        run: |
-          # This command must be run with root permissions
-          # to add the "C" flag, which allows setuid binaries.
-          echo ":qemu-aarch64:M::\x7fELF\x02\x01\x01\x00\x00\x00\x00\x00\x00\x00\x00\x00\x02\x00\xb7\x00:\xff\xff\xff\xff\xff\xff\xff\x00\xff\xff\xff\xff\xff\xff\xff\xff\xfe\xff\xff\xff:FPC:/usr/bin/qemu-aarch64-static:" > sudo tee /proc/sys/fs/binfmt_misc/register
-
-          
+          sudo apt-get install -y dosfstools e2fsprogs debootstrap
+      
       - name: Build rootfs
         run: |
           cd src
@@ -41,6 +54,7 @@ jobs:
         with:
           name: sonicpad-images
           path: src/out/*.img
+
 
 
 
