--- a/src/.config
+++ b/src/.config
@@ -5,7 +5,7 @@ L_USERNAME=sonic
 L_PASSWORD=pad
 
 # Debian Distro
-DEB_DISTRO=bookworm
+DEB_DISTRO=trixie
 DEB_URL=http://deb.debian.org/debian/
 
 # rootfs dirs
